added day, date and time fun in js

--- a/index.html
+++ b/index.html
@@ -20,6 +20,56 @@
 
     <div class="container">
       <!-- Timeblocks for 8am to 6pm hour work day -->
+ 
+      <!-- 8am-9am hour -->
+      <div class = "eight-am">
+
+      </div>
+
+      <!-- 9am-10am hour -->
+      <div class = "nine-am">
+
+      </div>
+
+      <!-- 10am-11am hour -->
+      <div class = "ten-am">
+
+      </div>
+
+      <!-- 11am-12pm hour -->
+      <div class = "eleven-am">
+
+      </div>
+
+      <!-- 12pm-1pm hour -->
+      <div class = "twelve-pm">
+
+      </div>
+
+      <!-- 1pm-2pm hour -->
+      <div class = "one-pm">
+
+      </div>
+
+      <!-- 2pm-3pm hour -->
+      <div class = "two-pm">
+
+      </div>
+
+      <!-- 3pm-4pm hour -->
+      <div class = "three-pm">
+
+      </div>
+
+      <!-- 4pm-5pm hour -->
+      <div class = "four-pm">
+
+      </div>
+
+      <!-- 5pm-6pm hour -->
+      <div class = "five-pm">
+
+      </div>
 
       
     </div>
